force-app/main/default/objects/InsurancePolicyCoverage/fields/Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Aggregate__c</fullName>
    <inlineHelpText>Aggregate of policy product</inlineHelpText>
    <label>Aggregate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>