force-app/main/default/objects/InsurancePolicyCoverage/fields/Business_License__c.field-meta.xml
<CustomField>
    <fullName>Business_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business License</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Policy Product Details</relationshipLabel>
    <relationshipName>Policy_Product_Details</relationshipName>
    <type>Lookup</type>
</CustomField>