force-app/main/default/objects/InsurancePolicyCoverage/fields/Deductible_Days__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Days__c</fullName>
    <inlineHelpText>Deductible days applied on a policy product</inlineHelpText>
    <label>Deductible Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>