force-app/main/default/objects/InsurancePolicyCoverage/fields/Deductible_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Percentage__c</fullName>
    <inlineHelpText>Deductible percentage applied on a policy product</inlineHelpText>
    <label>Deductible Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>