force-app/main/default/objects/InsurancePolicyCoverage/fields/Include_in_Doc__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Doc__c</fullName>
    <formula>IF( Quote_Product_Detail__r.Name = &apos;Hard Costs&apos; 
 || Quote_Product_Detail__r.Name  = &apos;Soft Costs&apos;
 || Quote_Product_Detail__r.Name  = &apos;Existing Structure&apos;
 || Quote_Product_Detail__r.Name  = &apos;Delay in Start-Up&apos;
 || Quote_Product_Detail__r.Name= &apos;Earthquake&apos;
 || Quote_Product_Detail__r.Name  = &apos;Flood&apos;
 || Quote_Product_Detail__r.Name  = &apos;Sewer Back-Up&apos;
 || Quote_Product_Detail__r.Name  = &apos;Water Damage&apos; 

, true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Doc?</label>
    <type>Checkbox</type>
</CustomField>