force-app/main/default/objects/InsurancePolicyCoverage/fields/Include_in_doc_sublimit__c.field-meta.xml
<CustomField>
    <fullName>Include_in_doc_sublimit__c</fullName>
    <formula>IF( Quote_Product_Detail__r.Name = &apos;Unnamed Location(s)&apos;
|| Quote_Product_Detail__r.Name = &apos;Property In-Transit&apos;
|| Quote_Product_Detail__r.Name = &apos;Debris Removal&apos;
|| Quote_Product_Detail__r.Name = &apos;Delay in Start Up&apos;
|| Quote_Product_Detail__r.Name=  &apos;Extra and Expediating Expenses&apos;
|| Quote_Product_Detail__r.Name = &apos;Ingress/Egress&apos;
|| Quote_Product_Detail__r.Name = &apos;Fire Department Service Charges&apos;
|| Quote_Product_Detail__r.Name = &apos;Fire Fighting Expenses&apos;
|| Quote_Product_Detail__r.Name = &apos;Pollutant Clean-Up&apos;
|| Quote_Product_Detail__r.Name = &apos;Professional Fees&apos;
|| Quote_Product_Detail__r.Name = &apos;Valuable Papers and Records&apos;
|| Quote_Product_Detail__r.Name = &apos;Building By-Laws&apos;
|| Quote_Product_Detail__r.Name = &apos;Accounts Receivables&apos;


, true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in doc sublimit</label>
    <type>Checkbox</type>
</CustomField>