force-app/main/default/objects/InsurancePolicyCoverage/fields/Monthly_rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_rate__c</fullName>
    <formula>Rate__c /InsurancePolicy.Intital_Policy_Terms__c</formula>
    <label>Monthly rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>