force-app/main/default/objects/InsurancePolicyCoverage/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Policy Product</inlineHelpText>
    <label>Product Option</label>
    <referenceTo>CoverageType</referenceTo>
    <relationshipLabel>Policy Product Details</relationshipLabel>
    <relationshipName>Policy_Product_Details</relationshipName>
    <type>Lookup</type>
</CustomField>