force-app/main/default/objects/InsurancePolicyCoverage/fields/Policy_Limit__c.field-meta.xml
<CustomField>
    <fullName>Policy_Limit__c</fullName>
    <inlineHelpText>Policy limit applied on a policy product</inlineHelpText>
    <label>Policy Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>