force-app/main/default/objects/InsurancePolicyCoverage/fields/Policy_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Product_Name__c</fullName>
    <inlineHelpText>Name to identify policy product summary</inlineHelpText>
    <label>Policy Product Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>