force-app/main/default/objects/InsurancePolicyCoverage/fields/PPL_Date__c.field-meta.xml
<CustomField>
    <fullName>PPL_Date__c</fullName>
    <label>PPL Date</label>
    <type>Date</type>
</CustomField>