force-app/main/default/objects/InsurancePolicyCoverage/fields/Product_Option_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Option_Id__c</fullName>
    <formula>Quote_Product_Detail__r.ProductOption__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Option Id</label>
    <type>Text</type>
</CustomField>