force-app/main/default/objects/InsurancePolicyCoverage/fields/QPD_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>QPD_RecordTypeId__c</fullName>
    <formula>Quote_Product_Detail__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QPD RecordTypeId</label>
    <type>Text</type>
</CustomField>