force-app/main/default/objects/InsurancePolicyCoverage/fields/Retention__c.field-meta.xml
<CustomField>
    <fullName>Retention__c</fullName>
    <inlineHelpText>Retention applied on a policy product</inlineHelpText>
    <label>Retention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>