force-app/main/default/objects/InsurancePolicyCoverage/fields/Sub_Limit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Limit_Percentage__c</fullName>
    <inlineHelpText>Sub-Limit percentage applied on policy product</inlineHelpText>
    <label>Sub-Limit Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>