force-app/main/default/objects/InsurancePolicyCoverage/fields/SublimitWhattoshow__c.field-meta.xml
<CustomField>
    <fullName>SublimitWhattoshow__c</fullName>
    <formula>IF(Sub_Limit__c  &gt;0 &amp;&amp;  Sub_Limit_Percentage__c &gt;0,
     TEXT(Sub_Limit_Percentage__c*100) &amp; &apos;% or $&apos;  &amp;  TEXT(Sub_Limit__c) , &apos;$&apos; &amp; TEXT(FLOOR(Sub_Limit__c/1000)) &amp; &apos;,&apos; &amp; RIGHT(TEXT(Sub_Limit__c), LEN(TEXT(Sub_Limit__c)) - LEN(TEXT(FLOOR(Sub_Limit__c/1000)))) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SublimitWhattoshow</label>
    <type>Text</type>
</CustomField>