force-app/main/default/objects/InsurancePolicyCoverage/fields/Third_Party_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third-Party Coverage</label>
    <type>Checkbox</type>
</CustomField>