force-app/main/default/objects/InsurancePolicyCoverage/fields/U_S_ERISA_Plan_Coverage__c.field-meta.xml
<CustomField>
    <fullName>U_S_ERISA_Plan_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>U.S. ERISA Plan Coverage</label>
    <type>Checkbox</type>
</CustomField>