force-app/main/default/objects/InsurancePolicyCoverage/recordTypes/Commercial_Lines.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Lines</fullName>
    <active>true</active>
    <description>Represent coverage, extension and sub-limit of commercial lines product.</description>
    <label>Commercial Lines</label>
</RecordType>