force-app/main/default/objects/InsurancePolicyCoverage/recordTypes/Financial_Lines.recordType-meta.xml
<RecordType>
    <fullName>Financial_Lines</fullName>
    <active>true</active>
    <description>Represent coverage, extension and sub-limit of financial lines product.</description>
    <label>Financial Lines</label>
</RecordType>