force-app/main/default/objects/InsurancePolicyCoverage/recordTypes/Professional_Lines.recordType-meta.xml
<RecordType>
    <fullName>Professional_Lines</fullName>
    <active>true</active>
    <description>Represent coverage, extension and sub-limit of professional lines product.</description>
    <label>Professional Lines</label>
</RecordType>