force-app/main/default/objects/InsurancePolicyCoverage/recordTypes/Sponsored_Program.recordType-meta.xml
<RecordType>
    <fullName>Sponsored_Program</fullName>
    <active>true</active>
    <label>Sponsored Program</label>
</RecordType>